fix: fix gap

--- a/src/pages/Main/components/category-section/CategoryCards.scss
+++ b/src/pages/Main/components/category-section/CategoryCards.scss
@@ -1,5 +1,4 @@
 .category {
-  margin-top: 34px;
   overflow: hidden;
 
   &__card-container {
@@ -82,8 +81,6 @@
   }
 
   @media screen and (max-width: $large-desktop) {
-    margin-top: calc(48px + (34 - 48) * (100vw - 360px) / (1559.9 - 360));
-
     &__card-container {
       gap: calc(8px + (16 - 8) * (100vw - 360px) / (1559.9 - 360));
       margin-top: calc(16px + (40 - 16) * (100vw - 360px) / (1559.9 - 360));
